# sudonomicon

./: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  links.md  pyproject.toml
01_intro/: index.md
02_fs/: index.md
03_proc/: index.md  pstree.out
04_jobs/: index.md
05_http/: dump_structure.out  dump_structure.py  get_404.py  get_json.py  get_remote.py  index.md  response_headers.py
06_auth/: index.md
07_venv/: index.md
07_virt/: index.md
08_finale/: index.md
auth/: index.md
bibliography/: index.md
docs/: index.html  links.html
docs/01_intro/: index.html
docs/02_fs/: index.html
docs/03_proc/: index.html
docs/04_jobs/: index.html
docs/05_http/: index.html
docs/06_auth/: index.html
docs/07_venv/: index.html
docs/07_virt/: index.html
docs/08_docker/: index.html
docs/08_finale/: index.html
docs/09_finale/: index.html
docs/auth/: index.html
docs/bibliography/: index.html
docs/conduct/: index.html
docs/contrib/: index.html
docs/contributing/: index.html
docs/dock/: index.html
docs/finale/: index.html
docs/fs/: index.html
docs/glossary/: index.html
docs/http/: index.html
docs/intro/: index.html
docs/jobs/: index.html
docs/license/: index.html
docs/log/: 2026-03-29T13:34:53Z.md
docs/network/: index.html
docs/packenv/: index.html
docs/proc/: index.html
docs/s01_intro/: index.html
docs/s04_jobs/: index.html
extras/: links.md  words.txt
glossary/: index.md
http/: get_remote.py
intro/: index.md
jobs/: index.md
network/: index.md
proc/: index.md
s01_intro/: index.md
templates/: page.html
var/: index.md
(+4 files in other folders)
