[project]
name = "sudononomicon"
description = "an introduction to Unix systems for the cautious and weary"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "fastapi",
    "flask",
    "mccole",
    "pandas",
    "psutil",
    "requests",
    "requests_toolbelt",
    "uvicorn[standard]"
]

[tool.mccole]
skips = [
    "*~",
    "*.env",
    "*.mk",
    "*.out",
    "*.py",
    "*.sh",
    "*.tbl",
    "*.text",
    "extras/**",
    "old/**",
    "uv.lock"
]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"CONTRIBUTING.md" = "contrib"
"LICENSE.md" = "license"
