[project]
name = "sudononomicon"
description = "An introduction to Unix systems for the cautious and weary"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "linkchecker",
    "mccole"
]

[tool.mccole]
skips = [
    "*~",
    "*.env",
    "*.mk",
    "*.out",
    "*.py",
    "*.sh",
    "*.tbl",
    "*.text",
    "extras/**",
    "old/**",
    "uv.lock",
    "Dockerfile"
]
