[project]
name = "sudononomicon"
description = "An introduction to Unix systems for the cautious and weary"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "mccole>=2.5.0",
]

[tool.mccole]
skips = [
    "*~",
    "*.env",
    "*.mk",
    "*.out",
    "*.py",
    "*.sh",
    "*.tbl",
    "*.text",
    "extras/**",
    "old/**",
    "uv.lock",
    "Dockerfile"
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
